test/scc_test/expr/semantic-errors/021.a
021.t:4:6: error: expression must have arithmetic type